<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF0E6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/relative_background_profile"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/backHenGio"
                android:layout_width="51dp"
                android:layout_height="45dp"
                android:background="@drawable/back"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/Textview1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="60dp"
                android:padding="10dp"
                android:text="@string/hen_gio_thiet_bi"
                android:textSize="19sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/txtCountdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnHenGio"

            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/relative_background_profile"
            android:text="00:00:00"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnChonThoiGian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/relative_background_profile"
            android:padding="10dp"
            android:text="@string/chon_thoi_gian"
            android:textColor="@color/little_black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/txtThoiGianHen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnChonThoiGian"
            android:layout_marginTop="12dp"
            android:text=""
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnChonThietBi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/relative_background_profile"
            android:padding="10dp"
            android:text="@string/chon_thiet_bi"
            android:textColor="@color/little_black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/txtThietBi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnChonThietBi"
            android:layout_marginTop="20dp"
            android:text=""
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHenGio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/relative_background_profile"
            android:padding="10dp"
            android:text="@string/hen_gio_thiet_bi"
            android:textColor="@color/little_black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnStopAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/relative_background_profile"
            android:padding="10dp"
            android:text="@string/dung_tat_thiet_bi"
            android:textColor="@color/little_black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />


    </LinearLayout>

</RelativeLayout>
