<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF0E6"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/relative_background_profile"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/backBtnChinhSua"
                    android:layout_width="51dp"
                    android:layout_height="45dp"
                    android:background="@drawable/back"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/Textview1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="60dp"
                    android:padding="10dp"
                    android:text="@string/edit_info"
                    android:textSize="19sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/languageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_background_profile"
                android:layout_below="@+id/linearLayout2"
                android:layout_marginTop="150dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sdttext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cai_dat_nn"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/relative_background_profile"
                android:layout_below="@+id/linearLayout3"
                android:layout_marginTop="22dp"
                android:id="@+id/logoutButton"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idtext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/log_out"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>







        </LinearLayout>
    </ScrollView>






</RelativeLayout>
