<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF0E6"
    tools:context=".PhongSo2Activity">

    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/relative_background_profile"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/backBtn2"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:background="@drawable/back"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/Textview1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:padding="10dp"
            android:text="@string/room_no2_room"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ViewFlipper
        android:id="@+id/viewFlipperDoorP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@drawable/image_button_shape">

            <ImageView
                android:id="@+id/doorButtonP2"
                android:layout_width="73dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="11dp"
                android:src="@drawable/doroff" />

            <Switch
                android:id="@+id/switch_door2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="310dp"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/doorButtonP2"
                android:text="@string/door_room"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>


    <ViewFlipper
        android:id="@+id/viewFlipperACP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFlipperDoorP2"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@drawable/image_button_shape">

            <ImageView
                android:id="@+id/acButtonP2"
                android:layout_width="70dp"
                android:layout_height="52dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="11dp"
                android:src="@drawable/acoff" />

            <Switch
                android:id="@+id/switch_ac2"
                android:layout_width="298dp"
                android:layout_height="51dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/acButtonP2"
                android:text="@string/ac_room"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>

    <ViewFlipper
        android:id="@+id/viewFlipperFanP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFlipperACP2"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@drawable/image_button_shape">

            <ImageView
                android:id="@+id/fanButtonP2"
                android:layout_width="73dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:src="@drawable/fanoff" />

            <Switch
                android:id="@+id/switch_fan2"
                android:layout_width="298dp"
                android:layout_height="51dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="480dp"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/fanButtonP2"
                android:text="@string/fan_room"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>


    <ViewFlipper
        android:id="@+id/viewFlipperLightP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewFlipperFanP2"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/image_button_shape">

            <ImageView
                android:id="@+id/lightButtonP2"
                android:layout_width="73dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/lightoff" />

            <Switch
                android:id="@+id/switch_light2"
                android:layout_width="298dp"
                android:layout_height="51dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="570dp"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/lightButtonP2"
                android:text="@string/light_room"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>


</RelativeLayout>
